@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 19:05:49 brook Exp $
+
+R_PKGNAME=	callr
+R_PKGVER=	3.3.1
+CATEGORIES=	devel
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Call R from R
+LICENSE=	mit
+
+DEPENDS+=	R-processx>=3.4.0:../../sysutils/R-processx
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
